Repair Box Shadow Of ScrollBar

--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -51,7 +51,7 @@
     overflow-x: hidden;
   }
   .nav-links::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     /* border-radius: 10px; */
     background-color: #f5f5f5;
   }
@@ -63,7 +63,7 @@
 
   .nav-links::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     background-color: #000000;
     border: 2px solid #555555;
   }
@@ -159,7 +159,7 @@
   }
 
   body::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
     background-color: #f5f5f5;
   }
@@ -171,7 +171,7 @@
 
   body::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     background-color: #000000;
   }
 }
