--- a/CSS/style.css
+++ b/CSS/style.css
@@ -589,7 +589,7 @@ h5 {
 }
 
 body::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   /* border-radius: 10px; */
   background-color: #f5f5f5;
 }
@@ -601,7 +601,7 @@ body::-webkit-scrollbar {
 
 body::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #000000;
   border: 2px solid #555555;
 }
